--- a/flask_app/templates/area.html
+++ b/flask_app/templates/area.html
@@ -113,6 +113,6 @@
         });
       });
     </script>
-    <img id="center-image" src="C:/Users/19805128155/Desktop/database_design/nanjin_area.jpg" alt="中心图片">
+    <img id="center-image" src="https://pic4.zhimg.com/v2-fd9cd93b7bbd098e51533552b24e2d8f_r.jpg" alt="中心图片">
   </body>
 </html>
