--- a/flask_app/templates/area.html
+++ b/flask_app/templates/area.html
@@ -109,7 +109,7 @@
       const buttons = document.querySelectorAll('button');
       buttons.forEach(button => {
         button.addEventListener('click', () => {
-          window.location.href = `/area=${button.id}`;
+          window.location.href = `/area/${button.id}`;
         });
       });
     </script>
