--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -104,7 +104,7 @@
   </header>
   <nav>
     <a href="/area">不同城区的景点</a>
-    <a href="/hotel">酒店信息</a>
+    <a href="/hotel_area">酒店信息</a>
   </nav>
   <main>
     <div class="card">
