--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -108,7 +108,7 @@
   </nav>
   <main>
     <div class="card">
-      <img src="https://via.placeholder.com/600x400" alt="Card Image">
+      <img src="https://img2.baidu.com/it/u=4214843158,3652918959&fm=253&fmt=auto&app=138&f=JPEG?w=750&h=500" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 1</h2>
         <p class="card-description">这是一条非常出色的旅游线路，可以带您去看到最美丽的风景。</p>
@@ -119,7 +119,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/600x400" alt="Card Image">
+      <img src="https://img1.baidu.com/it/u=3966806355,1402889207&fm=253&fmt=auto&app=138&f=JPEG?w=667&h=500" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 2</h2>
         <p class="card-description">这是一条非常出色的旅游线路，可以让您体验到最深入的文化。</p>
@@ -130,7 +130,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/600x400" alt="Card Image">
+      <img src="https://img0.baidu.com/it/u=2489595425,816787863&fm=253&fmt=auto&app=138&f=JPEG?w=993&h=369" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 3</h2>
         <p class="card-description">这是一条非常出色的旅游线路，可以带您去欣赏到最美味的食物和美酒。</p>
