--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -111,8 +111,8 @@
       <img src="https://img2.baidu.com/it/u=4214843158,3652918959&fm=253&fmt=auto&app=138&f=JPEG?w=750&h=500" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 1</h2>
-        <p class="card-description">这是一条非常出色的旅游线路，可以带您去看到最美丽的风景。</p>
-        <form method="GET" action="/route_detail">
+        <p class="card-description">去南京有这份攻略就够啦！南京三天两晚游，跟着这份攻略走准没错儿！</p>
+        <form method="GET" action="/route_detail1">
           <input type="hidden" name="route_id" value="1">
           <input type="submit" class="card-link" value="查看详情">
         </form>
@@ -122,8 +122,8 @@
       <img src="https://img1.baidu.com/it/u=3966806355,1402889207&fm=253&fmt=auto&app=138&f=JPEG?w=667&h=500" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 2</h2>
-        <p class="card-description">这是一条非常出色的旅游线路，可以让您体验到最深入的文化。</p>
-         <form method="GET" action="/route_detail">
+        <p class="card-description">没预算的有时间的宝子们看过来！这份南京四天三晚奢华深度游收藏点起来！</p>
+         <form method="GET" action="/route_detail2">
           <input type="hidden" name="route_id" value="2">
           <input type="submit" class="card-link" value="查看详情">
         </form>
@@ -133,8 +133,8 @@
       <img src="https://img0.baidu.com/it/u=2489595425,816787863&fm=253&fmt=auto&app=138&f=JPEG?w=993&h=369" alt="Card Image">
       <div class="card-content">
         <h2 class="card-title">旅游线路 3</h2>
-        <p class="card-description">这是一条非常出色的旅游线路，可以带您去欣赏到最美味的食物和美酒。</p>
-<form method="GET" action="/route_detail">
+        <p class="card-description">全网极限大挑战，南京大学生特种兵两天一夜出游！</p>
+<form method="GET" action="/route_detail3">
 <input type="hidden" name="route_id" value="3">
 <input type="submit" class="card-link" value="查看详情">
 </form>
