--- a/flask_app/templates/hotelintro.html
+++ b/flask_app/templates/hotelintro.html
@@ -67,7 +67,9 @@
       <h2>名称：{{hotel.name}}</h2>
       <p>地址：{{hotel.location}}</p>
       <p>电话：{{hotel.call}}</p>
-      <p>预定链接：{{hotel.url}}</p>
+      <p>预定链接：
+       <a href= {{hotel.url}}>点我预定</a>
+      </p>
     </div>
   </div>
 
